# collaboration-prediction

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  pyproject.toml
collaboration_prediction/: __init__.py  commands.py  evaluate.py  train.py
collaboration_prediction/data_modules/: __init__.py  data.py  data_download.py  features.py
collaboration_prediction/inference_modules/: __init__.py  export.py  inference.py  inference_server.py
collaboration_prediction/model/: __init__.py  lightning_module.py  model.py
collaboration_prediction/utils/: __init__.py  dvc.py  torch_utils.py
configs/: config.yaml
configs/data/: default.yaml
configs/export/: default.yaml
configs/logging/: default.yaml
configs/model/: default.yaml
configs/trainer/: default.yaml
configs/training/: default.yaml
